# DDSEnabledRadar

./: ALGORITHM_IMPLEMENTATIONS.md  ARCHITECTURE.md  BUILD_FIXES_SUMMARY.md  CMakeLists.txt  COMPILATION_ERRORS_FIXED.md  COMPILATION_FIXES_REPORT.md  COMPILATION_FIXES_RESOLVED.md  FASTDDS_INSTALLATION_FIX.md  IMPLEMENTATION_SUMMARY.md  LINKER_ERRORS_FIXED.md  PROJECT_STRUCTURE.md  README.md
apps/: CMakeLists.txt
apps/radar_data_processor/: data_processor.cpp  data_processor.hpp  main.cpp  tracking_manager.cpp  tracking_manager.hpp
apps/radar_signal_processor/: detection_processor.cpp  detection_processor.hpp  main.cpp  signal_processor.cpp  signal_processor.hpp
config/: system_config.yaml
protocols/: CMakeLists.txt
protocols/protobuf/: radar_messages.proto  track_messages.proto
scripts/: build.sh  fix_fastdds_install.sh
shared/: CMakeLists.txt
shared/common/include/common/: types.hpp
shared/common/utils/include/utils/: hungarian_algorithm.hpp
shared/configuration/include/configuration/: config_manager.hpp
shared/configuration/src/: config_manager.cpp
shared/interfaces/include/interfaces/: i_association.hpp  i_clustering.hpp  i_filter.hpp  i_logger.hpp
shared/logging/include/logging/: logger.hpp
shared/logging/src/: logger.cpp
shared/processing/association/include/association/: gnn.hpp  hungarian_algorithm.hpp  jpda.hpp  nearest_neighbor.hpp
shared/processing/association/src/: gnn.cpp  hungarian_algorithm.cpp  jpda.cpp  nearest_neighbor.cpp
shared/processing/clustering/include/clustering/: clustering_factory.hpp  dbscan.hpp  hierarchical_clustering.hpp  kmeans.hpp
shared/processing/clustering/src/: clustering_factory.cpp  dbscan.cpp  hierarchical_clustering.cpp  kmeans.cpp
shared/tracking/filters/include/filters/: ctr_filter.hpp  filter_factory.hpp  imm_filter.hpp  kalman_filter.hpp  particle_filter.hpp
shared/tracking/filters/src/: ctr_filter.cpp  filter_factory.cpp  imm_filter.cpp  kalman_filter.cpp  particle_filter.cpp
tests/: CMakeLists.txt
tests/simulation/: data_generator.hpp  test_simulation.cpp
